--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Apps\AzureSupport\packages.config" />
   <repository path="..\Apps\CaloomWorkerRole\packages.config" />
   <repository path="..\Apps\LuceneSupport\packages.config" />
+  <repository path="..\Apps\TheBallDeviceClient\packages.config" />
   <repository path="..\Apps\WebInterface\packages.config" />
   <repository path="..\Tools\ContentSyncTool\packages.config" />
 </repositories>
