--- a/NuGetPackages/TheBallDeviceClient/TheBallDeviceClient.nuspec
+++ b/NuGetPackages/TheBallDeviceClient/TheBallDeviceClient.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>TheBallDeviceClient</id>
-    <version>0.9.0-beta3</version>
+    <version>0.9.2-beta</version>
     <authors>Kalle Launiala</authors>
     <owners>Kalle Launiala</owners>
     <licenseUrl>https://github.com/abstractiondev/TheBallPlatform/blob/master/LICENSE.txt</licenseUrl>
-    <projectUrl>https://github.com/abstractiondev/TheBallPlatform/releases/tag/v0.9.0</projectUrl>
+    <projectUrl>https://github.com/abstractiondev/TheBallPlatform/releases</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>The Ball Device Client - Beta 0.9.0</description>
+    <description>The Ball Device Client - Beta 0.9.2</description>
     <releaseNotes>Developer preview - beta</releaseNotes>
     <copyright>Copyright 2014</copyright>
     <tags>TheBall Azure Device</tags>
