URL minor adjustments done by VS

--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -206,7 +206,7 @@
           <AutoAssignPort>False</AutoAssignPort>
           <DevelopmentServerPort>50430</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50430/</IISUrl>
+          <IISUrl>http://localdev:50430/</IISUrl>
           <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
           <IISAppRootUrl>http://localdev:50430/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
