--- a/Apps/TheBallDeviceClient/TheBallDeviceClient.csproj
+++ b/Apps/TheBallDeviceClient/TheBallDeviceClient.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ProtectionSupport.cs" />
     <Compile Include="SecurityNegotiationManager.cs" />
     <Compile Include="SecurityNegotiationResult.cs" />
+    <Compile Include="StageDefinition.cs" />
     <Compile Include="SymmetricSupport.cs" />
     <Compile Include="SyncSupport.cs" />
     <Compile Include="TheBallEKE.cs" />
