Replaced old test.caloom.com with devdev.theball.me - cleaned up replace to do later

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -1,32 +1,32 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value="5572fe40-3ff3-46c8-9a5b-20a728665bbb"/>
-  <add key="EmailFromAddress" value="no-reply-test@theball.me"/>
-  <add key="EmailValidationURLWithoutID" value="https://test.theball.me/emailvalidation/"/>
+  <add key="AdminGroupID" value=""/>
+  <add key="EmailFromAddress" value="no-reply-devdev@theball.me"/>
+  <add key="EmailValidationURLWithoutID" value="https://devdev.theball.me/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
-  <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
+  <add key="DefaultGroupTemplateList" value="categoriesandcontent,webview"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
-  <add key="WorkerActiveContainerName" value="test-caloom-com" />
-  <add key="ContainerRedirects" value="test-theball-me:test-caloom-com"/>
+  <add key="WorkerActiveContainerName" value="devdev-theball-me" />
+  <add key="ContainerRedirects" value=""/>
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
   <add key="EmailDeviceJoinSubjectFormat" value="Approve device connection to owner: {0}"/>
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
 Click the following link to confirm this action:
 {3}"/>
-  <add key="EmailValidationSubjectFormat" value="Welcome to The Ball for DEVELOPMENT TESTING!"/>
-  <add key="EmailValidationMessageFormat" value="Welcome to The Ball for DEVELOPMENT TESTING!
+  <add key="EmailValidationSubjectFormat" value="Welcome to The Ball for Device Development!"/>
+  <add key="EmailValidationMessageFormat" value="Welcome to The Ball for Device Development!
 
-Your email address '{0}' has been registered on the The Ball for DEVELOPMENT TESTING!. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
+Your email address '{0}' has been registered on the The Ball for Device Development!. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
 
 Use the following link to complete your registration (the link is valid for 30 minutes after which you need to resend the validation):
 {1}
 
 Wishing you all the best from The Ball team!"/>
 
-  <add key="EmailAccountMergeValidationSubjectFormat" value="Account MERGE on TheBall on DEVELOPMENT TESTING!"/>
-  <add key="EmailAccountMergeValidationMessageFormat" value="Account MERGE on TheBall on DEVELOPMENT TESTING!
+  <add key="EmailAccountMergeValidationSubjectFormat" value="Account MERGE on TheBall on Device Development!"/>
+  <add key="EmailAccountMergeValidationMessageFormat" value="Account MERGE on TheBall on Device Development!
 
 Your email address '{0}' is been requested for ACCOUNT MERGE! Please follow the link below ONLY IF YOU intend to do account merge!
 
@@ -50,7 +50,7 @@ Click the following link to confirm this action:
 Click the following link to confirm this action:
 {3}"/>
   <add key="EmailGroupJoinSubjectFormat" value="Invitation to join collaboration group: {0}"/>
-  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the The Ball for DEVELOPMENT TESTING! to collaborate in the group: {0}. 
+  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the The Ball for Device Development! to collaborate in the group: {0}. 
 
 Use the following link to accept the invitation and join the group:
 {1}
