--- a/Apps/WebInterface/InstanceSettings_TheBallDevDev.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallDevDev.config
@@ -1,13 +1,13 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value="7cd43a8c-bd6a-4b38-87be-395d5561b838"/>
-  <add key="EmailFromAddress" value="no-reply-demo@caloom.com"/>
-  <add key="EmailValidationURLWithoutID" value="https://demo.caloom.com/emailvalidation/"/>
+  <add key="AdminGroupID" value=""/>
+  <add key="EmailFromAddress" value="no-reply-devdev@theball.me"/>
+  <add key="EmailValidationURLWithoutID" value="https://devdev.theball.me/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
-  <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
+  <add key="DefaultGroupTemplateList" value="categoriesandcontent,webview"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
-  <add key="WorkerActiveContainerName" value="demo-caloom-com" />
+  <add key="WorkerActiveContainerName" value="devdev-theball-me" />
   <add key="ContainerRedirects" value=""/>
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
   <add key="EmailDeviceJoinSubjectFormat" value="Approve device connection to owner: {0}"/>
@@ -15,18 +15,18 @@
 
 Click the following link to confirm this action:
 {3}"/>
-  <add key="EmailValidationSubjectFormat" value="Welcome to Caloom for Demo/Testing!"/>
-  <add key="EmailValidationMessageFormat" value="Welcome to Caloom for Demo/Testing!
+  <add key="EmailValidationSubjectFormat" value="Welcome to The Ball for Device Development!"/>
+  <add key="EmailValidationMessageFormat" value="Welcome to The Ball for Device Development!
 
-Your email address '{0}' has been registered on the Caloom for Demo/Testing!. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
+Your email address '{0}' has been registered on the The Ball for Device Development!. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
 
 Use the following link to complete your registration (the link is valid for 30 minutes after which you need to resend the validation):
 {1}
 
-Wishing you all the best from Caloom team!"/>
+Wishing you all the best from The Ball team!"/>
 
-  <add key="EmailAccountMergeValidationSubjectFormat" value="Account MERGE on The Ball for Demo/Testing!"/>
-  <add key="EmailAccountMergeValidationMessageFormat" value="Account MERGE on The Ball for Demo/Testing!
+  <add key="EmailAccountMergeValidationSubjectFormat" value="Account MERGE on TheBall on Device Development!"/>
+  <add key="EmailAccountMergeValidationMessageFormat" value="Account MERGE on TheBall on Device Development!
 
 Your email address '{0}' is been requested for ACCOUNT MERGE! Please follow the link below ONLY IF YOU intend to do account merge!
 
@@ -35,6 +35,10 @@ Use the following link to complete the account merge (the link is valid for 5 mi
 
 Wishing you all the best from The Ball team!"/>
 
+  <!--
+  EmailAccountMergeValidationSubjectFormat
+  EmailAccountMergeValidationMessageFormat
+  -->
   <add key="EmailInputJoinSubjectFormat" value="Approve input joining to owner: {0}"/>
   <add key="EmailInputJoinMessageFormat" value="Your confirmation is required to allow the following information source '{0}' to be fetched within {1} ID {2}. 
 
@@ -46,7 +50,7 @@ Click the following link to confirm this action:
 Click the following link to confirm this action:
 {3}"/>
   <add key="EmailGroupJoinSubjectFormat" value="Invitation to join collaboration group: {0}"/>
-  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the Caloom for Demo/Testing! to collaborate in the group: {0}. 
+  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the The Ball for Device Development! to collaborate in the group: {0}. 
 
 Use the following link to accept the invitation and join the group:
 {1}
