Introduced GenericObject model for generic interface development, TODO: Lucene indexing

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -340,6 +340,8 @@
     <Compile Include="TheBall.Interface\DeleteConnectionWithStructuresImplementation.cs" />
     <Compile Include="TheBall.Interface\ExecuteConnectionProcessImplementation.cs" />
     <Compile Include="TheBall.Interface\FinalizeConnectionAfterGroupAuthorizationImplementation.cs" />
+    <Compile Include="TheBall.Interface\GenericObject.cs" />
+    <Compile Include="TheBall.Interface\GenericObjectCollection.cs" />
     <Compile Include="TheBall.Interface\InformationChangeItem.cs" />
     <Compile Include="TheBall.Interface\InitiateIntegrationConnectionImplementation.cs" />
     <Compile Include="TheBall.Interface\ExecuteRemoteCalledConnectionOperationImplementation.cs" />
