--- a/Tools/WebTemplateManager/app.config
+++ b/Tools/WebTemplateManager/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <WebTemplateManager.Properties.Settings>
             <setting name="AllowedContainerNames" serializeAs="String">
-                <value>schools-caloom-com,business-caloom-com,demo-caloom-com,test-caloom-com,testoip-aaltoglobalimpact-org,betaoip-aaltoglobalimpact-org</value>
+                <value>schools-caloom-com,business-caloom-com,demo-caloom-com,test-caloom-com,testoip-aaltoglobalimpact-org,betaoip-aaltoglobalimpact-org,devdev-theball-me</value>
             </setting>
         </WebTemplateManager.Properties.Settings>
     </applicationSettings>
