Added support for anonymous handler (=website) folder shortcuts - to implement www.xyzsite.org/s/ourshortcut/ kind of features on public web template

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -121,6 +121,7 @@
       <add name="AnonymousBlobStorageHandlerWwwHtml" path="/html/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerWwwAssets" path="/assets/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerWwwShortcut" path="/s/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerGrp" path="/grp/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
