Fixed binary file collection update to crash without data, patched storage support to recognize information objects with .pending extension as well

--- a/Tools/TheBallTool/app.config
+++ b/Tools/TheBallTool/app.config
@@ -18,7 +18,7 @@
                 <value>betaoip-aaltoglobalimpact-org</value>
                 <value>demooip-aaltoglobalimpact-org</value>
               -->
-              <value>betaoip-aaltoglobalimpact-org</value>
+              <value>test-caloom-com</value>
             </setting>
         </TheBallTool.Properties.Settings>
     </applicationSettings>
