--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -54,7 +54,7 @@
       </providers>
     </sessionState>
     -->
-    <httpRuntime targetFramework="4.5" maxRequestLength="512000" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="512000"/>
     <pages controlRenderingCompatibilityVersion="4.0" enableViewState="false" enableViewStateMac="false"/>
   </system.web>
   <location path="grp">
@@ -119,14 +119,17 @@
     <handlers>
       <add name="AnonymousBlobStorageHandlerWww" path="/www-public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerWwwHtml" path="/html/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
-      <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerWwwMedia" path="/AaltoGlobalImpact.OIP/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler"
+        resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerWwwAssets" path="/assets/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerWwwShortcut" path="/s/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerAssets" path="/oip-additions/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
-      <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
+      <add name="AnonymousBlobStorageHandlerBootstrap" path="/bootstrap-default/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler"
+        resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerGrp" path="/grp/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
       <add name="AnonymousBlobStorageHandlerPublic" path="/public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified"/>
-      <add name="AuthorizedBlobStorageHandlerAbout" path="/about/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" requireAccess="None"/>
+      <add name="AuthorizedBlobStorageHandlerAbout" path="/about/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified"
+        requireAccess="None"/>
       <add name="AuthorizedBlobStorageHandlerAuth" path="/auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified"/>
       <add name="EmailValidationHandler" path="/emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified"/>
       <add name="FileUploadHandler" path="/fileupload/*" verb="*" type="WebInterface.FileUploadHandler" resourceType="Unspecified"/>
@@ -154,6 +157,20 @@
   <runtime>
     <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
     <legacyHMACWarning enabled="0"/>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-5.2.0.0" newVersion="5.2.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
   <dotNetOpenAuth>
     <messaging>
