--- a/Apps/WebInterface/packages.config
+++ b/Apps/WebInterface/packages.config
@@ -7,6 +7,10 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.1.0.12182" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.0.12182" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.0.12182" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net40" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
 </packages>
