Migrated to VS2013 and 2.4 Azure tools (using still 2.2 tools DLLs on build) possible/probable hiccup at deployment...

--- a/Apps/TheBallWebFarm/packages.config
+++ b/Apps/TheBallWebFarm/packages.config
@@ -4,6 +4,10 @@
   <package id="AzureToolkit" version="2.4.10" targetFramework="net45" />
   <package id="AzureWebFarm" version="0.9.2.27" targetFramework="net45" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net45" />
