Added cpanel as default account template - alternative to webui

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -3,7 +3,7 @@
   <add key="AdminGroupID" value="5572fe40-3ff3-46c8-9a5b-20a728665bbb"/>
   <add key="EmailFromAddress" value="no-reply-test@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://test.theball.me/emailvalidation/"/>
-  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
