--- a/Apps/WebInterface/InstanceSettings_OIPBeta.config
+++ b/Apps/WebInterface/InstanceSettings_OIPBeta.config
@@ -3,7 +3,7 @@
   <add key="AdminGroupID" value="33d1d243-ea64-43eb-aeea-c1faaf63138b"/>
   <add key="EmailFromAddress" value="no-reply-betaoip@aaltoglobalimpact.org"/>
   <add key="EmailValidationURLWithoutID" value="https://betaoip.aaltoglobalimpact.org/emailvalidation/"/>
-  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
