--- a/Apps/WebInterface/InstanceSettings_TheBallBusiness.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallBusiness.config
@@ -3,7 +3,7 @@
   <add key="AdminGroupID" value="dae840ed-fdef-405b-b44b-5620b46c4f0b"/>
   <add key="EmailFromAddress" value="no-reply-business@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://business.theball.me/emailvalidation/"/>
-  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
