--- a/Apps/WebInterface/InstanceSettings_TheBallSchools.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallSchools.config
@@ -3,7 +3,7 @@
   <add key="AdminGroupID" value="1b5d1c48-b623-4cf5-b8e6-4e2834a037a8"/>
   <add key="EmailFromAddress" value="no-reply-schools@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://schools.theball.me/emailvalidation/"/>
-  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
