--- a/Apps/WebInterface/InstanceSettings_OIPTest.config
+++ b/Apps/WebInterface/InstanceSettings_OIPTest.config
@@ -3,7 +3,7 @@
   <add key="AdminGroupID" value="03e65548-e9ad-4a58-b9b1-0c775dd40d9e"/>
   <add key="EmailFromAddress" value="no-reply-testoip@aaltoglobalimpact.org"/>
   <add key="EmailValidationURLWithoutID" value="https://testoip.aaltoglobalimpact.org/emailvalidation/"/>
-  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
