--- a/Apps/WebInterface/InstanceSettings_TheBallDemo.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallDemo.config
@@ -3,7 +3,7 @@
   <add key="AdminGroupID" value="7cd43a8c-bd6a-4b38-87be-395d5561b838"/>
   <add key="EmailFromAddress" value="no-reply-demo@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://demo.theball.me/emailvalidation/"/>
-  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
