--- a/Apps/WebInterface/InstanceSettings_TheBallDevDev.config
+++ b/Apps/WebInterface/InstanceSettings_TheBallDevDev.config
@@ -3,7 +3,7 @@
   <add key="AdminGroupID" value=""/>
   <add key="EmailFromAddress" value="no-reply-devdev@theball.me"/>
   <add key="EmailValidationURLWithoutID" value="https://devdev.theball.me/emailvalidation/"/>
-  <add key="DefaultAccountTemplateList" value="webui"/>
+  <add key="DefaultAccountTemplateList" value="webui,cpanel"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="categoriesandcontent,webview"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
